--- a/index.ipynb
+++ b/index.ipynb
@@ -218,7 +218,8 @@
    },
    "outputs": [],
    "source": [
-    "names_and_ranks = [] # make sure the list is empty"
+    "names_and_ranks = []\n",
+    "for city in citie# make sure the list is empty"
    ]
   },
   {
