Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,8 @@
    "outputs": [],
    "source": [
     "names_and_ranks = []\n",
-    "for city in citie# make sure the list is empty"
+    "for city in citie_names:\n",
+    "    "
    ]
   },
   {
