--- a/index.ipynb
+++ b/index.ipynb
@@ -220,7 +220,7 @@
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for city in citie_names:\n",
-    "    "
+    "    print ()"
    ]
   },
   {
