Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -220,7 +220,7 @@
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for city in citie_names:\n",
-    "    names_and_ranke += (city_indices[0] + 1 +'. ' + city_names[0]   "
+    "    names_and_ranks += (city_indices[0] + 1 +'. ' + city_names[0]   "
    ]
   },
   {
