--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,7 @@
    "outputs": [],
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
-    "for city in citie_names:\n",
+    "for i in citie_names:\n",
     "    names_and_ranks += (city_indices[0] + 1 +'. ' + city_names[0]   "
    ]
   },
