--- a/index.ipynb
+++ b/index.ipynb
@@ -219,8 +219,8 @@
    "outputs": [],
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
-    "for i in citie_names:\n",
-    "    names_and_ranks += (city_indices[0] + 1 +'. ' + city_names[0]   "
+    "for i in city_indices:\n",
+    "    names_and_ranks += (city_indices[i] + 1 +'. ' + city_names[0]   "
    ]
   },
   {
