--- a/index.ipynb
+++ b/index.ipynb
@@ -220,7 +220,8 @@
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for i in city_indices:\n",
-    "    names_and_ranks += (city_indices[i] + 1 +'. ' + city_names[0]   "
+    "    names_and_ranks += (city_indices[i] + 1 +'. ' + city_names[i])\n",
+    "    print name"
    ]
   },
   {
