Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -212,16 +212,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "Missing parentheses in call to 'print'. Did you mean print(names_and_ranks)? (<ipython-input-6-e96b2828f322>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-e96b2828f322>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    print names_and_ranks\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(names_and_ranks)?\n"
+     ]
+    }
+   ],
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for i in city_indices:\n",
     "    names_and_ranks += (city_indices[i] + 1 +'. ' + city_names[i])\n",
-    "    print name"
+    "    print names_and_ranks"
    ]
   },
   {
