Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -212,14 +212,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
       "1\n",
       "2\n",
       "3\n",
@@ -230,14 +229,15 @@
       "8\n",
       "9\n",
       "10\n",
-      "11\n"
+      "11\n",
+      "12\n"
      ]
     }
    ],
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for i in city_indices:\n",
-    "    names_and_ranks = city_indices[i]+1+'.'\n",
+    "    names_and_ranks = city_indices[i]+1\n",
     "    print (names_and_ranks)"
    ]
   },
