--- a/index.ipynb
+++ b/index.ipynb
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for i in city_indices:\n",
-    "    names_and_ranks = city_indices[i]+1\n",
+    "    names_and_ranks =+ city_indices[i]+1\n",
     "    print (names_and_ranks)"
    ]
   },
