--- a/index.ipynb
+++ b/index.ipynb
@@ -237,7 +237,7 @@
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for i in city_indices:\n",
-    "    names_and_ranks =+ city_indices[i] \n",
+    "    names_and_ranks =+ city_indices[i] +1\n",
     "    print (names_and_ranks)"
    ]
   },
