Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -230,7 +230,7 @@
    "source": [
     "names_and_ranks = [] # make sure the list is empty\n",
     "for i in city_indices:\n",
-    "    names_and_ranks.append(f\"\")     \n",
+    "    names_and_ranks.append(f\"{i + 1}.\")     \n",
     "    print (names_and_ranks)"
    ]
   },
