--- a/index.ipynb
+++ b/index.ipynb
@@ -281,7 +281,8 @@
    },
    "outputs": [],
    "source": [
-    "city_populations = []"
+    "city_populations = []\n",
+    "for population in city"
    ]
   },
   {
