Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -282,7 +282,8 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "for population in city"
+    "for population in cities:\n",
+    "    "
    ]
   },
   {
