--- a/index.ipynb
+++ b/index.ipynb
@@ -282,8 +282,8 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "for population in cities:\n",
-    "    city_populations.append(cities[])"
+    "for i in city_indices:\n",
+    "    city_populations.append(cities[i][])"
    ]
   },
   {
