--- a/index.ipynb
+++ b/index.ipynb
@@ -275,28 +275,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 41,
+   "metadata": {},
    "outputs": [],
    "source": [
     "city_populations = []\n",
     "for i in city_indices:\n",
-    "    city_populations.append(cities[i][])"
+    "    city_populations.append(cities[i]['Population'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2800000"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "city_populations[0] # 2891000\n",
     "city_populations[1] # 2800000\n",
-    "city_populations[-1] # 0"
+    "#city_populations[-1] # 0"
    ]
   },
   {
