--- a/index.ipynb
+++ b/index.ipynb
@@ -286,16 +286,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2800000"
+       "0"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
    "source": [
     "city_populations[0] # 2891000\n",
     "city_populations[1] # 2800000\n",
-    "#city_populations[-1] # 0"
+    "city_populations[-1] # 0"
    ]
   },
   {
@@ -315,10 +315,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 45,
+   "metadata": {},
    "outputs": [],
    "source": [
     "trace_populations = {'x': names_and_ranks, \n",
@@ -330,11 +328,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "name": "populations",
+         "text": [
+          "1. Buenos Aires",
+          "2. Toronto",
+          "3. Pyeongchang",
+          "4. Marakesh",
+          "5. Albuquerque",
+          "6. Los Cabos",
+          "7. Greenville",
+          "8. Archipelago Sea",
+          "9. Walla Walla Valley",
+          "10. Salina Island",
+          "11. Solta",
+          "12. Iguazu Falls"
+         ],
+         "type": "bar",
+         "uid": "e2262ad4-6c50-11e9-ae35-afdb7c03a40c",
+         "x": [
+          "1. Buenos Aires",
+          "2. Toronto",
+          "3. Pyeongchang",
+          "4. Marakesh",
+          "5. Albuquerque",
+          "6. Los Cabos",
+          "7. Greenville",
+          "8. Archipelago Sea",
+          "9. Walla Walla Valley",
+          "10. Salina Island",
+          "11. Solta",
+          "12. Iguazu Falls"
+         ],
+         "y": [
+          2891000,
+          2800000,
+          2581000,
+          928850,
+          559277,
+          287651,
+          84554,
+          60000,
+          32237,
+          4000,
+          1700,
+          0
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"2983f886-8a93-46a7-91c6-87765f1fa29f\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"2983f886-8a93-46a7-91c6-87765f1fa29f\", [{\"name\": \"populations\", \"text\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"x\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"y\": [2891000, 2800000, 2581000, 928850, 559277, 287651, 84554, 60000, 32237, 4000, 1700, 0], \"type\": \"bar\", \"uid\": \"e232fe62-6c50-11e9-ae35-afdb7c03a40c\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"2983f886-8a93-46a7-91c6-87765f1fa29f\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"2983f886-8a93-46a7-91c6-87765f1fa29f\", [{\"name\": \"populations\", \"text\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"x\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"y\": [2891000, 2800000, 2581000, 928850, 559277, 287651, 84554, 60000, 32237, 4000, 1700, 0], \"type\": \"bar\", \"uid\": \"e232fe62-6c50-11e9-ae35-afdb7c03a40c\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import plotly\n",
     "plotly.offline.init_notebook_mode(connected=True)\n",
