--- a/index.ipynb
+++ b/index.ipynb
@@ -429,7 +429,9 @@
    },
    "outputs": [],
    "source": [
-    "city_areas = []"
+    "city_areas = []\n",
+    "for i in city_indices:\n",
+    "    city_populations.append(cities[i]['Population'])"
    ]
   },
   {
